HEAD
	+ bugfix: EBox::Sudo::sudo wasn't working properly
1.1.41
	+ bugfix: use encodeURIComponent to fetch data from fields using Ajax
1.1.30
	+ Menu entries are now grouped by functionality
	+ Fixed order of items in menu (no more 'random' order)
	+ Added missing netmask values for network addresses between 16 and 32
	+ Fixed regression with already used values in select types
1.1.20
	+ Support for custom view
	+ Fix in netwrappers: iface methofd now retuns the ifcaes sorted
1.1.10
	+ UI improvement: submit Ajax forms by pressing return
1.1
	+ Fixing bogus div and missing items to make eBox Web UI more w3c
	complaint
	+ Added generic JS graph class using flotr with mouse tracking and
	legend
	+ Added remote services link button
	+ Added support for `additionalParameters` to `EBox.TabMenu` JS
	prototype
	+ Added `configKeysFromFile` to `EBox::Config`
	+ Bugfix: make boolean setter honour editable attribute
	+ Change tableBody to fetch each row instead of all rows at the same time
	+ Place pager on the bottom-right corner of the table
	+ Bugfix: hide trailing text when there's a change on a union select
0.12.101
	+ Bugfix: Remove bogus mason tags
	+ Bugfix: Use 'window' as variable instead of 'Window' since it is
	more portable
0.12.100
	+ Remove bogus div end tag
	+ Fix items list for titles with single quotes
	+ Fix: precondition fail message is not showed when it does not exist
0.12.99
	+ Add new table view without actions
	+ Add javascript library to generate report charts
	+ Fixing redirect URL coming from proxy
	+ Added Chinese from Taiwan and Galician translations
0.12.2
	+ Bugfix: Fix an issue with javascript and the union type that prevented
	things like samba share UI from working ok
0.12.1
	+ Bugfix: Get logger from EBox category if it is not set explicity
	to allow external programs to log using eBox log helper functions
0.12
	+ Added .field_help class in public.css
	+ Add field help to modelView.mas
	+ Stripe tables in hang table